# Zoe2_PMS

./: .gitmodules  README.md  SolarPVMPPT.slx  SolarPVMPPT.slx.r2023b
1_Simulation/Python_Sim/: mppt_simulate.py  package_sim.py  simulate.py
2_Embedded/: STMG4.ioc
2_Embedded/LED_Blink/: .cproject  LED_Blink.ioc
2_Embedded/STM32L4_CANOpen/: .cproject  .mxproject  .project  STM32L4_CANOpen Debug.launch  STM32L4_CANOpen.ioc
2_Embedded/STM32_CAN/: .cproject  STM32_CAN Debug.launch  STM32_CAN.ioc
2_Embedded/STM32_Comms/: .project  STM32_Comms.ioc
2_Embedded/STM32_ad5245/: .cproject  .project  STM32_ad5245.ioc  STM32_ad5245.launch
2_Embedded/STM32_ads1115/: .cproject  .project  STM32_ads1115.ioc
2_Embedded/STM32_max31855/: .cproject  .mxproject  .project  STM32_max31855.ioc
2_Embedded/Zoe2_PMS_STM32G4/: .cproject  .mxproject  .project  Zoe2_PMS_STM32G4 Debug.launch  Zoe2_PMS_STM32G4.ioc
3_Miscellaneous/Battery_BMS_Parsing/: batteryParse.py  candump-2026-02-05_184205_parsed.txt
3_Miscellaneous/Data_Logger/: analysis_plotter.py  data_logger.py  data_plotter.py  plotter.py
Arduino_Validation/Validation_Scripts/: spi_recieve.cpp  spi_send.cpp
Battery_BMS_Parsing/: batteryParse.py
LED_Blink/: LED_Blink.ioc  LED_Blink.launch
LED_Blink/Debug/: LED_Blink.elf  LED_Blink.list
Python_Sim/: simulate.py
STM32_Comms/: .cproject  STM32_Comms.launch
STM32_Comms/Debug/: STM32_Comms.elf  STM32_Comms.list  STM32_Comms.map  makefile
logs/: zoe2_log_20260416_210404.csv
zoe2_ros2_ws/src/demo_gui/: package.xml  setup.cfg  setup.py
(+265 files in other folders)
